src/app/home/home.component.css
.container {
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex-direction: column;
    height: 90vh;
}

.homeHeader {
    flex: 1;
    text-align: center;
    font-size: 4vh;
    margin-top: 10px;
    text-decoration-line: underline;
}

.homeDivider {
    flex:5;
    display: flex;
    justify-content: space-around;
    align-items: center;
    flex-direction: column;
}

.areas {
    font-size: 5vh;
}

